deployment_grpc-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-test-service
  labels:
    app: grpc-test
spec:
  type: NodePort
  selector:
    app: grpc-test
    tier: web
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
  - port: 9001
    targetPort: 9001
    protocol: TCP
    name: grpc
  - port: 8090
    targetPort: 8090
    protocol: TCP
    name: espstatus
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-test
        tier: web
    spec:
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port=9000",
          "--http2_port=9001",
          "--healthz=/",
          "--backend=grpc://127.0.0.1:50051",
          "--service=bookstore.endpoints.meta-test-164215.cloud.goog",
          "--rollout_strategy=managed",
        ]
        ports:
          - containerPort: 9000
          - containerPort: 9001
          - containerPort: 8090
        readinessProbe:
          httpGet:
            path: /health
            port: 9000
      - name: grpc-test-app
        image: eu.gcr.io/meta-test-164215/grpc-test--v1:v1.2
        ports:
        - containerPort: 50051
