deployment_qrcode.yaml
apiVersion: v1
kind: Service
metadata:
  name: qrcode-service
  labels:
    app: qrcode
spec:
  type: NodePort
  selector:
    app: qrcode
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: qrcode
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: qrcode
        tier: web
    spec:
      containers:
      - name: qrcode-app
        image: eu.gcr.io/meta-test-164215/qrcode--v1:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
